// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`step2 - removeThemePreludes (snapshots) > case basic > basic 1`] = `
"@reference "../../../global.css";
@import "./shared.css";

@layer components {
  .btn {
    color: red;
  }
  .btn {
    color: green;
  }
}

@theme {
  --theme-var: var(--color-red);
}

@media (max-width: 768px) {
  .test {
    color: yellow;
  }
}"
`;

exports[`step2 - removeThemePreludes (snapshots) > case class-selectors > class-selectors 1`] = `
"@layer components {
  .btn {
    color: red;
    background-color: blue;
    padding: 8px;
  }
  .btn {
    color: green;
    border: 1px solid red;
  }
}"
`;

exports[`step2 - removeThemePreludes (snapshots) > case comma-separated > comma-separated 1`] = `
"@layer components {
  .btn,
  .icon-btn {
    color: red;
  }
  .btn,
  .icon-btn {
    color: green;
  }
}"
`;

exports[`step2 - removeThemePreludes (snapshots) > case dark-variants > dark-variants 1`] = `
"@layer components {
  .btn {
    color: red;
  }
  .btn {
    color: yellow;
  }
  .dark .btn {
    color: pink;
  }
  .dark .btn {
    color: purple;
  }
}"
`;

exports[`step2 - removeThemePreludes (snapshots) > case nested-selectors > nested-selectors 1`] = `
"@layer components {
  .btn {
    color: red;
    background-color: blue;
    &:focus-visible {
      outline: 2px solid red;
    }
    &:active {
      transform: translate(2px, 2px);
    }
  }
  .btn {
    color: green;
    border: 1px solid red;
    &:hover {
      transform: scale(0.99);
    }
    &:active {
      transform: translate(-2px, -2px);
    }
  }
}"
`;
